apps/infra/authentik/overlays/infra/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:euc/5qEF7SFOWI/EZYku+TQNmF+TfYCm,iv:STBK5bFOu8uxVDI1bidU8qFlNENLor4Lw2yxGaFeCrg=,tag:FoiEcHrPJjV7ji0moSg21Q==,type:str]
        kubernetes.io/ingress.class: traefik-external
    name: authentik
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:tF4paGSsJNSgFgP25e42ZL0PefRZpp6xCpZHWtQLLMxiTEPR,iv:D6IwUnFWiucZ2yE0tRxQSEWJOBcg7ddVTlrz3J5y1DU=,tag:wW2mY5PBYz9Gr2Guq4bbiw==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              port: 443
    tls:
        domains:
            - main: ENC[AES256_GCM,data:nZE/J2fQgqYVYjGjND3p0+TOlDBkCs4Z,iv:/NbTiXdMGCfFLdcGCwEiyabbPzLOHOsbensQqlsA2ZI=,tag:s3/rY5Pdv3RJKx+FICQcfA==,type:str]
              sans:
                - ENC[AES256_GCM,data:BTHwTNTw6Rog7TQWrxzz+w23vxVKU/V96g==,iv:PF25zp42KwMOVXkHosOL32D8CemomHy4mzwhVW6jvi8=,tag:jO90SWH7lyzvDYwyq/ONwQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Rk15YW94SVFuZmRpRmVk
[...]
            mCE83TpKhr7WNi6cE25gg2ql3a2iCmlQBza3NTJ7Ko/A13jXeVoPNw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-08T11:11:51Z"
    mac: ENC[AES256_GCM,data:ml4mxU52O1Oy5D85FebaZF+pZMV/UDRcKfHUnT0Kx47wmpVEBlSFLZOccf7e24p9vlTIoAPW5pLKtKDh3k68CuEbelMV6FechsWMfDzN0PBjMIq3EVzvhXUC2mwPNsUi8UpTRySQKkEKdWMF4Hflumh78mw9VqPN1btpLFTACBI=,iv:e9Jjgcf1hccjip76XD8xcExnlhTIbAP3SwrhaFuahsw=,tag:Wklxn9FWe+C9va2AiS6xdg==,type:str]
    pgp:
        - created_at: "2024-06-30T14:57:46Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh/DeLLRD/9gg5GhdOsVMUIKwh5kyC94v2uDzjpmhtvBo
[...]
            =lMYc
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
