apps/infra/authentik/overlays/infra/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:2alcfpupIsBSnR39HlebqExdGTxG1DU/,iv:9QuyWQvWH1F6sKG5C/Hh1d6UthEYeN7CqZ1wCtT003g=,tag:W4CuVPD2w3OE+zC7VPYdXA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    # labels:
    #     app.kubernetes.io/name: authentik-server
    name: authentik-staging
    namespace: authentik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:hsBoNVn0KXrWw2880xpcQq4aQc5iDT/e0Lh9R3hw+Z9m4b5D,iv:B5MLj9X4oCMNLJ0HzQR4YjKaE9x0dmEyMwQWL3UR0Sw=,tag:LX5xHIdJFkl7zOcKgjSfDQ==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: authentik-server
              port: 443
    tls:
        domains:
            - main: ENC[AES256_GCM,data:HJ3o/Eim2zTH6K+8NQYArb0qch7uSDK5,iv:Pj009NxyuEa1kJU7bCqhp9l1kqys4R9ONhvgrA20Alg=,tag:z1NoOhfR87KcynRQAoXUig==,type:str]
              sans:
                - ENC[AES256_GCM,data:Duq7BCAHnr7D3iMIGju0ypjOqQ7MZETkRA==,iv:nlKt7hVW0T/nwAmp9SlYMt0/qCyL5xF/Qa9eWuFDj6k=,tag:t0InKCaVDKZdXotJBmULkQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: authentik-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaZDBadkRJZTM1SjI0VFpz
[...]
            TOWvFRFOUZh9zeZrnU6CyuJyCh0VnKbJCOipr53TsuVBi1FajtvksA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-08T11:11:40Z"
    mac: ENC[AES256_GCM,data:FXboxMvf8VI2N8OpT6UpXqSpmADLPRCko1mQ+RtgSMQQG4ly4efIti+UlwTyKHLl19ioisqVy+/GZzKAfAdLOsiuU34Z9jnfQlOdlIsJ+L8egXXbSpJvwl5DcpkQith51RNmruaajWfbdQtw61IJsHhJukum84qk/U5+6va62xU=,iv:V5j29pY2fhK5iU+SfwXW6C1p8NCJTqfroq/Z80u2DyM=,tag:HjBtmRqZSPEQnb8+wbRuJw==,type:str]
    pgp:
        - created_at: "2024-06-21T23:00:53Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+Ox5KIzlVDnuOiSU8/B1O6hlNQ8dQh47MLc0749E9MS6h
[...]
            =J4rZ
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
